<resources>
    <string name="app_name">YouStudent</string>
    <string name="loggin_button">Login</string>
    <string name="register_button">Register</string>
    <string name="editTextTextPersonName.hint">fuck off</string>
    <string name="Logo_text">You\nStudent</string>
    <string name="Logo_text_login">Login</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password">password</string>
    <string name="Welcome">Welcome to \nYou\nStudent</string>
    <string name="start">Take Picture</string>
    <string name="name">Picture Name</string>
    <string name="save_pic">Save Picture</string>
</resources>